[gd_scene load_steps=5 format=3 uid="uid://by0ndk2ly75ja"]

[ext_resource type="Theme" uid="uid://4xakigboy4d4" path="res://themes/gothic_pc_sheet.tres" id="1_ebau0"]
[ext_resource type="Texture2D" uid="uid://03r83g6kcb5s" path="res://images/frames/PCSheetPaper.jpg" id="2_yj2jf"]
[ext_resource type="Script" path="res://main/PCSheet.gd" id="3_55eye"]
[ext_resource type="Texture2D" uid="uid://fuc828eaqhhy" path="res://images/frames/PartyFrame.png" id="4_a7imc"]

[node name="PCSheet" type="TextureRect" groups=["sheets"]]
offset_left = 40.0
offset_top = 40.0
offset_right = 1560.0
offset_bottom = 1040.0
mouse_filter = 0
theme = ExtResource("1_ebau0")
texture = ExtResource("2_yj2jf")
script = ExtResource("3_55eye")

[node name="HBox" type="HBoxContainer" parent="."]
layout_mode = 0
offset_right = 1520.0
offset_bottom = 1000.0
theme_override_constants/separation = 0

[node name="PartyStatsFrame" type="NinePatchRect" parent="HBox"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("4_a7imc")
draw_center = false
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10

[node name="PartyStats" type="VBoxContainer" parent="HBox/PartyStatsFrame"]
custom_minimum_size = Vector2(360, 0)
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 50.0
offset_bottom = 50.0

[node name="Learnings" type="Label" parent="HBox/PartyStatsFrame/PartyStats"]
layout_mode = 2
theme_override_colors/font_color = Color(0.875702, 0.477074, 0.793166, 1)
text = "   Learnings"

[node name="Formulae" type="Label" parent="HBox/PartyStatsFrame/PartyStats"]
layout_mode = 2
text = "Alchemical Formulae"
horizontal_alignment = 1

[node name="FormulaeMenu" type="OptionButton" parent="HBox/PartyStatsFrame/PartyStats/Formulae"]
modulate = Color(1, 0, 1, 0.34902)
custom_minimum_size = Vector2(350, 30)
layout_mode = 0
offset_right = 350.0
offset_bottom = 30.0

[node name="Saints" type="Label" parent="HBox/PartyStatsFrame/PartyStats"]
layout_mode = 2
text = "Knowledge of Saints"
horizontal_alignment = 1

[node name="SaintsMenu" type="OptionButton" parent="HBox/PartyStatsFrame/PartyStats/Saints"]
modulate = Color(0.937255, 0.882353, 0.607843, 0.313726)
custom_minimum_size = Vector2(350, 30)
layout_mode = 0
offset_right = 45.0
offset_bottom = 20.0

[node name="InventoryFrame" type="NinePatchRect" parent="HBox"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("4_a7imc")
draw_center = false
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10

[node name="Inventory" type="VBoxContainer" parent="HBox/InventoryFrame"]
custom_minimum_size = Vector2(360, 0)
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 370.0
offset_bottom = 980.0

[node name="Money" type="Label" parent="HBox/InventoryFrame/Inventory"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "0"
horizontal_alignment = 1

[node name="InvLabel" type="Label" parent="HBox/InventoryFrame/Inventory"]
layout_mode = 2
text = "Party Inventory"
horizontal_alignment = 1

[node name="PartyInventory" type="ItemList" parent="HBox/InventoryFrame/Inventory" groups=["inventories"]]
custom_minimum_size = Vector2(360, 900)
layout_mode = 2

[node name="CharacterFrame" type="NinePatchRect" parent="HBox"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("4_a7imc")
draw_center = false
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10

[node name="Character" type="VBoxContainer" parent="HBox/CharacterFrame"]
custom_minimum_size = Vector2(370, 0)
layout_mode = 2
offset_left = 10.0
offset_top = 10.0
offset_right = 380.0
offset_bottom = 990.0
theme_override_constants/separation = 2

[node name="Name" type="Label" parent="HBox/CharacterFrame/Character"]
layout_mode = 2
text = "Name"
horizontal_alignment = 1

[node name="Birthday" type="Label" parent="HBox/CharacterFrame/Character"]
layout_mode = 2
text = "Birthday"

[node name="Birthplace" type="Label" parent="HBox/CharacterFrame/Character"]
layout_mode = 2
text = "Birthplace"
horizontal_alignment = 1

[node name="Equipment" type="Label" parent="HBox/CharacterFrame/Character"]
layout_mode = 2
theme_override_colors/font_color = Color(0.343749, 0.678026, 0.897567, 1)
text = "   Equipment
"

[node name="Helmet" type="Label" parent="HBox/CharacterFrame/Character"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
text = "Helmet
"
horizontal_alignment = 1

[node name="HelmetSlot" type="ItemList" parent="HBox/CharacterFrame/Character"]
custom_minimum_size = Vector2(360, 45)
layout_mode = 2
size_flags_horizontal = 0

[node name="Vest" type="Label" parent="HBox/CharacterFrame/Character"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
text = "Vest
"
horizontal_alignment = 1

[node name="VestSlot" type="ItemList" parent="HBox/CharacterFrame/Character"]
custom_minimum_size = Vector2(360, 45)
layout_mode = 2
size_flags_horizontal = 0

[node name="Leggings" type="Label" parent="HBox/CharacterFrame/Character"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
text = "Leggings
"
horizontal_alignment = 1

[node name="LeggingsSlot" type="ItemList" parent="HBox/CharacterFrame/Character"]
custom_minimum_size = Vector2(360, 45)
layout_mode = 2
size_flags_horizontal = 0

[node name="MainWeapon" type="Label" parent="HBox/CharacterFrame/Character"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
text = "Main Weapon
"
horizontal_alignment = 1

[node name="MainWeaponSlot" type="ItemList" parent="HBox/CharacterFrame/Character"]
custom_minimum_size = Vector2(360, 45)
layout_mode = 2
size_flags_horizontal = 0

[node name="SideArm" type="Label" parent="HBox/CharacterFrame/Character"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
text = "Side Arm
"
horizontal_alignment = 1

[node name="SideArmSlot" type="ItemList" parent="HBox/CharacterFrame/Character"]
custom_minimum_size = Vector2(360, 45)
layout_mode = 2
size_flags_horizontal = 0

[node name="Shield" type="Label" parent="HBox/CharacterFrame/Character"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
text = "Shield
"
horizontal_alignment = 1

[node name="ShieldSlot" type="ItemList" parent="HBox/CharacterFrame/Character"]
custom_minimum_size = Vector2(360, 45)
layout_mode = 2
size_flags_horizontal = 0

[node name="RangedWeapon" type="Label" parent="HBox/CharacterFrame/Character"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
text = "Ranged Weapon
"
horizontal_alignment = 1

[node name="RangedWeaponSlot" type="ItemList" parent="HBox/CharacterFrame/Character"]
custom_minimum_size = Vector2(360, 45)
layout_mode = 2
size_flags_horizontal = 0

[node name="PotionOne" type="Label" parent="HBox/CharacterFrame/Character"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
text = "Potion
"
horizontal_alignment = 1

[node name="PotionOneSlot" type="ItemList" parent="HBox/CharacterFrame/Character"]
custom_minimum_size = Vector2(360, 45)
layout_mode = 2
size_flags_horizontal = 0

[node name="PotionTwo" type="Label" parent="HBox/CharacterFrame/Character"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
text = "Potion
"
horizontal_alignment = 1

[node name="PotionTwoSlot" type="ItemList" parent="HBox/CharacterFrame/Character"]
custom_minimum_size = Vector2(360, 45)
layout_mode = 2
size_flags_horizontal = 0

[node name="SkillsFrame" type="NinePatchRect" parent="HBox"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("4_a7imc")
draw_center = false
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10

[node name="Skills" type="VBoxContainer" parent="HBox/SkillsFrame"]
custom_minimum_size = Vector2(370, 0)
layout_mode = 2
offset_left = 10.0
offset_top = 10.0
offset_right = 380.0
offset_bottom = 990.0
theme_override_constants/separation = -1

[node name="Characteristics" type="Label" parent="HBox/SkillsFrame/Skills"]
layout_mode = 2
theme_override_colors/font_color = Color(0.392157, 0.690196, 0.309804, 1)
text = "   Characteristics"

[node name="Endurance" type="Label" parent="HBox/SkillsFrame/Skills"]
layout_mode = 2
text = "30"

[node name="Strength" type="Label" parent="HBox/SkillsFrame/Skills"]
layout_mode = 2
text = "30"

[node name="Agility" type="Label" parent="HBox/SkillsFrame/Skills"]
layout_mode = 2
text = "30"

[node name="Intelligence" type="Label" parent="HBox/SkillsFrame/Skills"]
layout_mode = 2
text = "30"

[node name="Perception" type="Label" parent="HBox/SkillsFrame/Skills"]
layout_mode = 2
text = "30"

[node name="Charisma" type="Label" parent="HBox/SkillsFrame/Skills"]
layout_mode = 2
text = "30"

[node name="Combat" type="Label" parent="HBox/SkillsFrame/Skills"]
layout_mode = 2
theme_override_colors/font_color = Color(0.839216, 0, 0, 1)
text = "   Combat Abilities"

[node name="Sword" type="Label" parent="HBox/SkillsFrame/Skills"]
layout_mode = 2
text = "30"

[node name="Impact" type="Label" parent="HBox/SkillsFrame/Skills"]
layout_mode = 2
text = "30"

[node name="Flail" type="Label" parent="HBox/SkillsFrame/Skills"]
layout_mode = 2
text = "30"

[node name="Polearm" type="Label" parent="HBox/SkillsFrame/Skills"]
layout_mode = 2
text = "30"

[node name="Throw" type="Label" parent="HBox/SkillsFrame/Skills"]
layout_mode = 2
text = "30"

[node name="Bow" type="Label" parent="HBox/SkillsFrame/Skills"]
layout_mode = 2
text = "30"

[node name="Gun" type="Label" parent="HBox/SkillsFrame/Skills"]
layout_mode = 2
text = "30"

[node name="Shield" type="Label" parent="HBox/SkillsFrame/Skills"]
layout_mode = 2
text = "30"

[node name="Academic" type="Label" parent="HBox/SkillsFrame/Skills"]
layout_mode = 2
theme_override_colors/font_color = Color(0.87451, 0.478431, 0.792157, 1)
text = "   Academic Knowledge"

[node name="Alchemy" type="Label" parent="HBox/SkillsFrame/Skills"]
layout_mode = 2
text = "30"

[node name="Religion" type="Label" parent="HBox/SkillsFrame/Skills"]
layout_mode = 2
text = "30"

[node name="Righteous" type="Label" parent="HBox/SkillsFrame/Skills"]
layout_mode = 2
text = "30"

[node name="Heal" type="Label" parent="HBox/SkillsFrame/Skills"]
layout_mode = 2
text = "30"

[node name="Latin" type="Label" parent="HBox/SkillsFrame/Skills"]
layout_mode = 2
text = "30"

[node name="ReadWrite" type="Label" parent="HBox/SkillsFrame/Skills"]
layout_mode = 2
text = "30"

[node name="Practical" type="Label" parent="HBox/SkillsFrame/Skills"]
layout_mode = 2
theme_override_colors/font_color = Color(0.972549, 0.552941, 0.164706, 1)
text = "   Practical Skills"

[node name="Speaking" type="Label" parent="HBox/SkillsFrame/Skills"]
layout_mode = 2
text = "30"

[node name="Trade" type="Label" parent="HBox/SkillsFrame/Skills"]
layout_mode = 2
text = "30"

[node name="Streetwise" type="Label" parent="HBox/SkillsFrame/Skills"]
layout_mode = 2
text = "30"

[node name="Artifice" type="Label" parent="HBox/SkillsFrame/Skills"]
layout_mode = 2
text = "30"

[node name="Riding" type="Label" parent="HBox/SkillsFrame/Skills"]
layout_mode = 2
text = "30"

[node name="Woodwise" type="Label" parent="HBox/SkillsFrame/Skills"]
layout_mode = 2
text = "30"

[connection signal="item_activated" from="HBox/InventoryFrame/Inventory/PartyInventory" to="." method="_on_party_inventory_item_activated" unbinds=1]
[connection signal="item_selected" from="HBox/InventoryFrame/Inventory/PartyInventory" to="." method="_on_party_inventory_item_selected"]
[connection signal="item_clicked" from="HBox/CharacterFrame/Character/HelmetSlot" to="." method="_on_helmet_slot_item_clicked" unbinds=3]
[connection signal="item_clicked" from="HBox/CharacterFrame/Character/VestSlot" to="." method="_on_vest_slot_item_clicked" unbinds=3]
[connection signal="item_clicked" from="HBox/CharacterFrame/Character/LeggingsSlot" to="." method="_on_leggings_slot_item_clicked" unbinds=3]
[connection signal="focus_entered" from="HBox/CharacterFrame/Character/MainWeaponSlot" to="." method="_on_main_weapon_slot_focus_entered"]
[connection signal="item_clicked" from="HBox/CharacterFrame/Character/MainWeaponSlot" to="." method="_on_main_weapon_slot_item_clicked" unbinds=3]
[connection signal="item_clicked" from="HBox/CharacterFrame/Character/SideArmSlot" to="." method="_on_side_arm_slot_item_clicked" unbinds=3]
[connection signal="item_clicked" from="HBox/CharacterFrame/Character/ShieldSlot" to="." method="_on_shield_slot_item_clicked" unbinds=3]
[connection signal="item_clicked" from="HBox/CharacterFrame/Character/RangedWeaponSlot" to="." method="_on_ranged_weapon_slot_item_clicked" unbinds=3]
[connection signal="item_clicked" from="HBox/CharacterFrame/Character/PotionOneSlot" to="." method="_on_potion_one_slot_item_clicked" unbinds=3]
[connection signal="item_clicked" from="HBox/CharacterFrame/Character/PotionTwoSlot" to="." method="_on_potion_two_slot_item_clicked" unbinds=3]
